--- a/auth_microservice/.env.example
+++ b/auth_microservice/.env.example
@@ -1,4 +1,4 @@
-PORT = 8000
+PORT = 
 DATABASE_URL =
 JWT_SECRET =
 # jwt secret must be same on both microservice as they use middleware individually
